# khaki

./: Cargo.toml  README.md  test.c
codegen/: Cargo.toml
codegen/src/: generator.rs  lib.rs
core/: main.rs
design/: memory.md
flatten/: Cargo.toml
flatten/src/: env.rs  flatten.rs  lib.rs
ir/src/: base.rs  hir.rs  lib.rs  parsed.rs  token.rs  union_find.rs
lambda-set/: Cargo.toml
lambda-set/src/: defunc.rs  gather.rs  lib.rs  lower.rs  order.rs  patch.rs  pool.rs  unify.rs  union_find.rs
lower/: Cargo.toml
lower/src/: builder.rs  lib.rs  lower.rs  sort.rs
parser/: Cargo.toml
parser/src/: expr.rs  lexer.rs  lib.rs  parser.rs  pattern.rs  program.rs
ref-count/: Cargo.toml
ref-count/src/: cycle_detector.rs  dec.rs  graph.rs  inc.rs  lib.rs  patch.rs
typer/: Cargo.toml
typer/src/: infer.rs  lib.rs  patch.rs  substitute.rs
