[package]
name = "khaki"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "core/main.rs"
name = "khaki"

[workspace]
members = [
  "ir",
  "parser",
  "flatten",
  "codegen", 
  "lambda-set"
]

[dependencies]
ir = { path = "ir" }
parser = { path = "parser" }
lambda-set = { path = "lambda-set" }
flatten = { path = "flatten" }
codegen = { path = "codegen" }
