[package]
name = "khaki"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "core/main.rs"
name = "khaki"

[workspace]
members = [
  "ir",
  "parser",
  "flatten",
  "codegen", 
  "lambda-set"
]

[dependencies]
ir = { path = "ir" }
parser = { path = "parser" }
lambda-set = { path = "lambda-set" }
flatten = { path = "flatten" }
codegen = { path = "codegen" }
ariadne = "0.5.0"
chumsky = "0.9.3"
