[package]
name = "khaki"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "core/main.rs"
name = "khaki"

[workspace]
members = [
  "ir",
  "parser",
  "typer",
  "flatten",
  "codegen", 
  "lambda-set",
  "lower", "ref-count"]

[dependencies]
ir = { path = "ir" }
parser = { path = "parser" }
typer = { path = "typer" }
flatten = { path = "flatten" }
lambda-set = { path = "lambda-set" }
lower = { path = "lower" }
ref-count = { path = "ref-count" }
codegen = { path = "codegen" }
ariadne = "0.5.0"
chumsky = "0.9.3"
